# first_self_learning_project_on_fastapi

./: alembic.ini  db.sqlite3  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: c2a4145247c5_initialize_db.py
core/: __init__.py  config.py
core/api/: __init__.py
core/api/v1/: __init__.py  dependencies.py
core/api/v1/authors/: __init__.py  crud.py  views.py
core/api/v1/books/: __init__.py  crud.py  views.py
core/api/v1/reviews/: __init__.py  crud.py  views.py
core/database/: __init__.py  db_helper.py
core/database/models/: __init__.py  association_tables.py  author.py  base_model.py  book.py  review.py
core/schemas/: __init__.py  author.py  base_schemas.py  book.py  review.py
